--- a/template page/styletemplate.css
+++ b/template page/styletemplate.css
@@ -1,48 +1,67 @@
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------- Barre de navigation ------------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+.navbar 
+    {
+        margin-bottom: 0;
+        border-radius: 0;
+        background-color:#222222 ;
+        min-height: 5vh;
+    }
+
+.nav-link
+    {
+        color: white;
+    }
+
+#contacte
+    {
+        color: gold;
+    }
+
+.logoJB
+    {
+        height: 50px;
+        width: 50px;
+    }
+
+/*----------------------------------------------------------------------------------------------------------------------------------------*/ 
+/*--------------------------------------------------------------- réglages pages ---------------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/ 
 
 .page{
     height: 100%;
     background-color: black;
     color: white;
+    margin-top: 6vh;
 }
 
-/* 
-.collapse {
-    visibility: hidden;
-  }
-  .collapse.show {
-    visibility: visible;
-    display: block;
-  }
-  .collapsing {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    -webkit-transition-property: height, visibility;
-    transition-property: height, visibility;
-    -webkit-transition-duration: 0.65s;
-    transition-duration: 0.65s;
-    -webkit-transition-timing-function: ease;
-    transition-timing-function: ease;
-  }
-  .collapsing.width {
-    -webkit-transition-property: width, visibility;
-    transition-property: width, visibility;
-    width: 0;
-    height: auto;
-  } */
-/* Collapse fin */
 .content{
     margin-left: auto;
     margin-right: auto
 }
-.social{
-   
+
+#separateur
+    {
+        height: 2px;
+        width: 100%;       
+        background-color: white;
+        margin: 0px;
+    }
+
+/*----------------------------------------------------------------------------------------------------------------------------------------*/ 
+/*---------------------------------------------------------- réglages réseaux sociaux ----------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/ 
+
+.social
+    {
         display: flex;
         flex-direction: column;
-    
-       
-}
-.social-button{
+        z-index: 1;
+    }
+
+.social-button
+{
     position: fixed;
     top : 33%;
 }
@@ -96,12 +115,4 @@
     
     background:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
     color: white;
-}
-.footer {
-    margin-top:auto;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-    background: #000000;
-    color: #FFFFFF;
 }
